# sf2hs

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default_config.yaml
src/sf2hs/cli/: __init__.py  commands.py
src/sf2hs/cli/commands/: list.py  load.py  save.py  sync.py  validate.py
src/sf2hs/cli/utils/: display.py
src/sf2hs/config/: loader.py
src/sf2hs/core/: salesforce.py
src/sf2hs/core/salesforce/: __init__.py  client.py  field_types.py  migration.py
src/sf2hs/utils/: file_handlers.py  validators.py
